@@ -92,8 +92,9 @@ module Devise
 
       # Convert new keys to methods which overwrites Devise defaults
       options.each { |key, value| send(:"#{key}=", value) }
-      send :include, Devise.model_orm
-      add_fields(modules)
+
+      # Call specific hooks for each ORM
+      Devise.orm_class.included_modules_hook(self, devise_modules)
     end
 
     # Stores all modules included inside the model, so we are able to verify
