@@ -1,9 +1,0 @@
-module Devise
-  module Orm
-    module Base
-      def add_fields(modules)
-        # Nothing happen because no modules
-      end
-    end
-  end
-end
