@@ -2,6 +2,8 @@ require 'devise/rails/routes'
 require 'devise/rails/warden_compat'
 
 Rails.configuration.after_initialize do
+  require "devise/orm/#{Devise.orm}"
+
   # Adds Warden Manager to Rails middleware stack, configuring default devise
   # strategy and also the failure app.
   Rails.configuration.middleware.use Warden::Manager do |manager|
@@ -12,6 +14,4 @@ Rails.configuration.after_initialize do
   Rails.configuration.middleware.use Devise::Middlewares::Rememberable
 
   I18n.load_path.unshift File.expand_path(File.join(File.dirname(__FILE__), 'locales', 'en.yml'))
-
-  require "devise/orm/#{Devise.orm}"
 end
